# Tron

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  Makefile  README.md  Tron.sln  Win-GenProjects.bat  premake5.lua
Sandbox/: CMakeLists.txt  Makefile  Sandbox.vcxproj  TronProfile-Runtime.json  TronProfile-Shutdown.json  TronProfile-Startup.json  imgui.ini  premake5.lua
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Tron/: CMakeLists.txt  Makefile  Tron.vcxproj  Tron.vcxproj.filters  premake5.lua
Tron-Editor/: CMakeLists.txt  Tron-Editor.vcxproj  imgui.ini  premake5.lua
Tron-Editor/assets/shaders/: FlatColor.glsl
Tron-Editor/src/: EditorLayer.cpp  EditorLayer.h  TronEditorApp.cpp
Tron-Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Tron/src/: Tron.h  tnpch.cpp  tnpch.h
Tron/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imGuiOpenGLRenderer.cpp
Tron/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Tron/src/Tron/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Tron/src/Tron/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
Tron/src/Tron/Debug/: Instrumentor.h
Tron/src/Tron/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tron/src/Tron/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Tron/src/Tron/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Tron/src/Tron/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.h
Tron/src/Tron/Scripts/: CameraController.h
bin-int/Debug-windows-x86_64/Sandbox/: Sandbox.exe.recipe  vc142.idb
bin-int/Debug-windows-x86_64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/Tron/: Tron.dll.recipe  Tron.idb  Tron.vcxproj.FileListAbsolute.txt  vc142.idb
bin-int/Debug-windows-x86_64/Tron-Editor/: Tron-Editor.exe.recipe  vc142.idb
bin-int/Debug-windows-x86_64/Tron-Editor/Tron-Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/Tron/Tron.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Tron.write.1u.tlog  link.10828.delete.1.tlog  link.15284.delete.1.tlog  link.19084.delete.1.tlog  link.2600.delete.1.tlog  link.27160.delete.1.tlog  link.28412.delete.1.tlog  link.3596.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc142.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Tron/: Tron.dll.recipe  vc142.idb
bin-int/Debug-x64/Tron/Tron.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tron.write.1u.tlog  link.18532.delete.1.tlog  link.27412.delete.1.tlog  (+3 more)
scripts/: Win-GenProjects.bat  premake5.lua
